--- a/index.html
+++ b/index.html
@@ -1,77 +1,233 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>वीडियो</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>VIP New Year Shayari Maker</title>
 
-        .app-container {
-            max-width: 1200px;
-            margin: 20px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+<style>
 
-        h1 {
-            text-align: center;
-            color: #333;
-        }
+body{
+  margin:0;
+  font-family:Poppins,Arial;
+  background:radial-gradient(circle at top,#1a2a6c,#1a1a2e,#000);
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  color:white;
+}
 
-        .video-gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-        }
+/* Upload Screen */
+#uploadScreen{
+  text-align:center;
+  width:92%;
+  max-width:480px;
+}
 
-        .video-item {
-            background-color: #f9f9f9;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-        }
+.big-btn{
+  background:linear-gradient(135deg,#ff512f,#dd2476);
+  color:white;
+  padding:20px;
+  font-size:22px;
+  border:none;
+  border-radius:45px;
+  width:100%;
+  font-weight:bold;
+  box-shadow:0 15px 40px rgba(0,0,0,.6);
+}
 
-        .video-item p {
-            text-align: center;
-            padding: 10px;
-            background-color: #fff;
-            margin: 0;
-            color: #333;
-        }
-    </style>
+/* Edit Screen */
+#editScreen{
+  display:none;
+  width:95%;
+  max-width:480px;
+}
+
+/* Outer VIP card */
+.card{
+  border-radius:28px;
+  padding:10px;
+  background:linear-gradient(145deg,#ffd700,#ff7eb3,#a18cd1,#6dd5fa);
+  background-size:400% 400%;
+  animation:vip 6s ease infinite;
+  box-shadow:0 25px 60px rgba(0,0,0,.6);
+}
+
+@keyframes vip{
+  0%{background-position:0% 0%}
+  50%{background-position:100% 100%}
+  100%{background-position:0% 0%}
+}
+
+canvas{
+  width:100%;
+  border-radius:24px;
+}
+
+/* Buttons */
+.btn{
+  width:100%;
+  padding:14px;
+  border:none;
+  border-radius:30px;
+  margin-top:10px;
+  font-size:17px;
+  font-weight:bold;
+}
+
+.prev{background:#00c6ff;color:white}
+.next{background:#2ecc71;color:white}
+.share{background:black;color:white}
+.back{background:#ff1744;color:white}
+
+</style>
 </head>
+
 <body>
-    <div class="app-container">
-        <h1> Video</h1>
-        <div class="video-gallery">
-            <!-- वीडियो 1 -->
-            <div class="video-item">
-                <iframe width="100%" height="200" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
-                <p>वीडियो 1 का शीर्षक</p>
-            </div>
-            <!-- वीडियो 2 -->
-            <div class="video-item">
-                <iframe width="100%" height="200" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
-                <p>वीडियो 2 का शीर्षक</p>
-            </div>
-            <!-- वीडियो 3 -->
-            <div class="video-item">
-                <iframe width="100%" height="200" src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allowfullscreen></iframe>
-                <p>वीडियो 3 का शीर्षक</p>
-            </div>
-            <!-- और वीडियो जोड़ें -->
-        </div>
-    </div>
-    <script>
-        // यदि आपको JavaScript की आवश्यकता हो, तो यहाँ कोड जोड़ें
-    </script>
+
+<!-- Upload Screen -->
+<div id="uploadScreen">
+  <h2>🎉 VIP New Year Wishes Maker 🎉</h2>
+
+  <input type="file" id="imgInput" accept="image/*" hidden>
+
+  <button class="big-btn" onclick="document.getElementById('imgInput').click()">
+    📤 अपनी फोटो अपलोड करें
+  </button>
+</div>
+
+<!-- Edit Screen -->
+<div id="editScreen">
+
+  <div class="card">
+    <canvas id="c"></canvas>
+  </div>
+
+  <button class="btn prev" onclick="prevShayari()">⬅ पिछली शायरी</button>
+  <button class="btn next" onclick="nextShayari()">✨ अगली शायरी</button>
+  <button class="btn share" onclick="shareImage()">📤 शेयर करें</button>
+  <button class="btn back" onclick="goBack()">⬅ वापस जाएँ</button>
+
+</div>
+
+<script>
+
+let canvas=document.getElementById("c");
+let ctx=canvas.getContext("2d");
+let img=new Image();
+let index=0;
+
+/* 50+ mix shayari list (VIP Selected) */
+const shayariList=[
+"🌟 नए साल की नई बहार,\nखुशियों की हो फुहार 🌟",
+"💖 तेरी मुस्कान मेरी पहचान,\nनया साल बस रहे तेरा नाम 💖",
+"✨ हर ख्वाहिश हो पूरी,\nनया साल लाए खुशियों की दूरी ✨",
+"🎉 हंसी आपका साथ न छोड़े,\nनया साल हर ग़म तोड़े 🎉",
+"💫 नए साल में मिले ऐसी उड़ान,\nऊपर ही ऊपर हो आपकी पहचान 💫",
+"🌸 रिश्ते रहें अपने प्यारे,\nनया साल खुशियाँ दे ढेर सारे 🌸",
+"🔥 जिंदगी में आए नया उजाला,\nसाल नया लगे सबसे निराला 🔥",
+"😊 मुस्कान हो होठों पर सदा,\nनया साल दे खुशियों की दवा 😊",
+"🌺 दुआ है मेरी रब से,\nहर पल आपका हंसी भरा हो 🌺",
+"🎆 नया साल दे नई रोशनी,\nखिले हर दिन आपकी जिंदगी 🎆"
+];
+
+/* Upload Image */
+document.getElementById("imgInput").addEventListener("change",e=>{
+  img.src=URL.createObjectURL(e.target.files[0]);
+
+  img.onload=function(){
+
+    document.getElementById("uploadScreen").style.display="none";
+    document.getElementById("editScreen").style.display="block";
+
+    canvas.width=900;
+    canvas.height=1100;
+
+    drawCard();
+  }
+});
+
+/* Main draw function */
+function drawCard(){
+
+  // background
+  ctx.fillStyle="#000";
+  ctx.fillRect(0,0,900,1100);
+
+  // user image full brightness
+  ctx.drawImage(img,0,80,900,800);
+
+  // VIP glow colorful panel
+  let g=ctx.createLinearGradient(0,720,900,1100);
+  g.addColorStop(0,"rgba(255,0,150,0.95)");
+  g.addColorStop(0.5,"rgba(0,255,180,0.95)");
+  g.addColorStop(1,"rgba(255,200,0,0.95)");
+  ctx.fillStyle=g;
+
+  ctx.beginPath();
+  ctx.roundRect(28,720,844,350,35);
+  ctx.fill();
+
+  // shayari text
+  let text=shayariList[index];
+
+  ctx.font="bold 60px sans-serif";
+  ctx.textAlign="center";
+  ctx.fillStyle="white";
+  ctx.strokeStyle="black";
+  ctx.lineWidth=8;
+
+  let y=860;
+  text.split("\n").forEach(line=>{
+    ctx.strokeText(line,450,y);
+    ctx.fillText(line,450,y);
+    y+=85;
+  });
+
+  // VIP 2026 heading
+  ctx.font="bold 64px sans-serif";
+  ctx.fillStyle="#ffeb3b";
+  ctx.strokeStyle="#000";
+  ctx.strokeText("🎉 Happy New Year 2026 🎉",450,1075);
+  ctx.fillText("🎉 Happy New Year 2026 🎉",450,1075);
+}
+
+/* Next / Previous */
+function nextShayari(){
+  index=(index+1)%shayariList.length;
+  drawCard();
+}
+
+function prevShayari(){
+  index=(index-1+shayariList.length)%shayariList.length;
+  drawCard();
+}
+
+/* Back to upload screen */
+function goBack(){
+  document.getElementById("uploadScreen").style.display="block";
+  document.getElementById("editScreen").style.display="none";
+}
+
+/* Native Share */
+async function shareImage(){
+
+  let blob=await new Promise(res=>canvas.toBlob(res,"image/png"));
+  let file=new File([blob],"vip_newyear.png",{type:"image/png"});
+
+  if(navigator.share && navigator.canShare && navigator.canShare({files:[file]})){
+    await navigator.share({
+      title:"VIP New Year Wish",
+      text:"🎉 Happy New Year 2026 🎉",
+      files:[file]
+    });
+    return;
+  }
+
+  alert("आपके ब्राउज़र में शेयर पैनल सपोर्ट नहीं है (HTTPS पर चलाएँ)");
+}
+
+</script>
+
 </body>
-</html>
+      </html>
