--- a/index.html
+++ b/index.html
@@ -1,262 +1,238 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-<title>VIP New Year Wishes Maker</title>
+<title>VIP New Year Card Maker 2026</title>
 
 <style>
 
 body{
   margin:0;
   font-family:Poppins,Arial;
-  background:radial-gradient(circle at top,#111,#000);
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  background:#020617;
   color:white;
 }
 
-.container{
-  width:92%;
+.app{
   max-width:480px;
+  margin:auto;
+  padding:16px;
 }
 
-h2{
-  text-align:center;
-  margin-bottom:6px;
-}
-
-/* main big button */
-.big-btn{
+.btn{
+  width:100%;
+  padding:15px;
+  border-radius:14px;
+  border:none;
+  margin-top:8px;
+  font-size:16px;
+  font-weight:700;
   background:linear-gradient(135deg,#ff512f,#dd2476);
   color:white;
-  padding:18px;
-  font-size:20px;
+}
+
+#adOverlay{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.92);
+  display:none;
+  z-index:9999;
+  text-align:center;
+  padding-top:120px;
+}
+
+#skipBtn{
+  margin-top:12px;
+  padding:8px 14px;
   border:none;
-  border-radius:40px;
-  width:100%;
-  font-weight:bold;
-  box-shadow:0 14px 35px rgba(0,0,0,.6);
-  margin-top:10px;
-}
-
-/* hidden class */
-.hidden{display:none}
-
-/* skip button */
-.skip-btn{
-  background:linear-gradient(135deg,#00e676,#1de9b6);
-  color:#000;
+  border-radius:10px;
   font-weight:900;
-}
-
-#editScreen{display:none}
-
-/* glowing card */
-.card{
-  margin-top:10px;
-  border-radius:26px;
-  padding:8px;
-  background:linear-gradient(145deg,#ff9a9e,#fad0c4,#a18cd1,#6dd5fa);
-  background-size:400% 400%;
-  animation:vip 7s ease infinite;
-  box-shadow:0 20px 55px rgba(0,0,0,.7);
-}
-
-@keyframes vip{
-  0%{background-position:0% 0%}
-  50%{background-position:100% 100%}
-  100%{background-position:0% 0%}
+  background:#00ff9c;
+  color:black;
+  display:none;
 }
 
 canvas{
   width:100%;
-  border-radius:22px;
+  margin-top:10px;
+  border-radius:16px;
 }
-
-/* small buttons */
-.btn{
-  width:100%;
-  padding:12px;
-  border:none;
-  border-radius:30px;
-  margin-top:8px;
-  font-size:16px;
-  font-weight:bold;
-}
-
-.prev{background:#00c6ff;color:white}
-.next{background:#2ecc71;color:white}
-.share{background:#ffffff;color:#000}
-.back{background:#ff1744;color:white}
 
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<div id="adOverlay">
+  <h2>⚡ Sponsored Ad</h2>
 
-  <h2>🎉 VIP New Year Wishes Maker 🎉</h2>
+  <p id="skipInfo">⏳ 5 सेकंड प्रतीक्षा करें…</p>
 
-  <!-- ⭐ Skip Ad (पहले hidden) -->
-  <button id="skipBtn" class="big-btn skip-btn hidden" onclick="skipAd()">
-    ⏭ Skip Ad
-  </button>
+  <!-- SAME PAGE INTERSTITIAL SLOT -->
+  <div id="interstitialBox"></div>
 
-  <!-- upload screen -->
-  <div id="uploadScreen">
+  <button id="skipBtn" onclick="closeAd()">⏭ Skip Ad</button>
+</div>
 
-    <input type="file" id="imgInput" accept="image/*" hidden>
+<div class="app">
 
-    <button class="big-btn"
-            onclick="openAd(); document.getElementById('imgInput').click()">
-      📤 अपनी फोटो अपलोड करें
-    </button>
-  </div>
+<h2>🎉 VIP New Year Card Maker 2026</h2>
 
-  <!-- edit screen -->
-  <div id="editScreen">
+<input type="file" id="imgInput" accept="image/*" onchange="loadImg()">
 
-    <div class="card">
-      <canvas id="c"></canvas>
-    </div>
+<div id="cardArea" style="display:none">
 
-    <button class="btn prev" onclick="openAd(); prevShayari()">⬅ पिछली शायरी</button>
-    <button class="btn next" onclick="openAd(); nextShayari()">✨ अगली शायरी</button>
-    <button class="btn share" onclick="openAd(); shareImage()">🚀 शेयर करें</button>
-    <button class="btn back" onclick="openAd(); goBack()">⬅ वापस जाएँ</button>
+<canvas id="c"></canvas>
 
-  </div>
+<button class="btn" onclick="withAd(prevShayari)">⬅ पिछली शायरी</button>
+<button class="btn" onclick="withAd(nextShayari)">➡ अगली शायरी</button>
+<button class="btn" onclick="withAd(downloadImg)">📥 डाउनलोड करें</button>
+<button class="btn" onclick="withAd(shareImg)">📤 शेयर करें</button>
+
+</div>
 
 </div>
 
 <script>
 
-/* 🔗 आपकी साइट लिंक (Share के साथ जाएगी) */
-const SITE_LINK="https://ajaymaurya8299.github.io/Kumar/";
+/* --------------------------------------------------
+   ⭐ OPTION–A (RECOMMENDED)
+   👉 यहाँ अपना असली INTERSTITIAL CODE डालें
+--------------------------------------------------*/
 
-/* ⭐ SMARTLINK – नई tab + 5 सेकंड बाद Skip दिखेगा */
-function openAd(){
+// उदाहरण:
+/*
+function loadInterstitial(){
+ atOptions={
+  'key':'YOUR_KEY',
+  'format':'interstitial',
+ };
+ var s=document.createElement("script");
+ s.src="//YOURNETWORK/invoke.js";
+ document.getElementById("interstitialBox").appendChild(s);
+}
+*/
 
-  const adUrl="https://www.effectivegatecpm.com/bn12v8x3hx?key=fd0a9f972b9219bd4ab142f2e4011868";
+/* --------------------------------------------------
+   ⭐ OPTION–B (आपका दिया हुआ pop/redirect code)
+   👉 जब तक interstitial न मिले, यह चलेगा
+--------------------------------------------------*/
 
-  // ad नई tab में खुलेगा
-  window.open(adUrl,"_blank");
-
-  // Skip छुपाओ
-  const skip=document.getElementById("skipBtn");
-  skip.classList.add("hidden");
-
-  // 5 सेकंड बाद दिखाओ
-  setTimeout(()=>{
-    skip.classList.remove("hidden");
-  },5000);
+function loadInterstitial(){
+   // ⚠️ यह redirect खोलेगा — same-page ad नहीं
+   window.open("https://pl28366677.effectivegatecpm.com/45/ea/0e/45ea0e065a95590327d0330a43bb5824.js","_blank");
 }
 
-/* ⏭ Skip */
-function skipAd(){
-  alert("Ad skipped 🙂 जारी रखें");
-}
+/* -------------------------------------------------- */
 
-/* CANVAS */
-const canvas=document.getElementById("c");
-const ctx=canvas.getContext("2d");
-const img=new Image();
-let index=0;
+let lastAd=0;
+let afterAdAction=null;
 
-/* ⭐ Shayari List */
-const shayariList=[
-"✨ नए साल की नई बहार,\nखुशियों की हो फुहार ✨",
-"💖 मुस्कान रहे हमेशा साथ,\nनया साल दे खुशियों की सौगात 💖",
-"🎉 हर दिन आपका खास बने,\nनया साल सुपरस्टार बने 🎉",
-"🌟 दुआ है रब से यही,\nपूरा हो हर सपना तुम्हारा 🌟",
-"🔥 दिल में हो खुशियों का उजाला,\nनया साल लगे सबसे निराला 🔥"
-];
+function withAd(action){
 
-/* Upload */
-document.getElementById("imgInput").addEventListener("change",e=>{
-  img.src=URL.createObjectURL(e.target.files[0]);
+  afterAdAction=action;
 
-  img.onload=function(){
+  const now=Date.now();
 
-    document.getElementById("uploadScreen").style.display="none";
-    document.getElementById("editScreen").style.display="block";
-
-    canvas.width=900;
-    canvas.height=1100;
-
-    drawCard();
-  }
-});
-
-/* Draw card */
-function drawCard(){
-
-  ctx.fillStyle="#000";
-  ctx.fillRect(0,0,900,1100);
-
-  ctx.drawImage(img,0,70,900,820);
-
-  let g=ctx.createLinearGradient(0,720,900,1100);
-  g.addColorStop(0,"rgba(255,0,150,.95)");
-  g.addColorStop(0.5,"rgba(0,255,200,.95)");
-  g.addColorStop(1,"rgba(255,220,0,.95)");
-  ctx.fillStyle=g;
-
-  ctx.beginPath();
-  ctx.roundRect(28,720,844,350,35);
-  ctx.fill();
-
-  let text=shayariList[index];
-
-  ctx.font="bold 60px sans-serif";
-  ctx.textAlign="center";
-  ctx.fillStyle="white";
-  ctx.strokeStyle="black";
-  ctx.lineWidth=8;
-
-  let y=855;
-  text.split("\n").forEach(line=>{
-    ctx.strokeText(line,450,y);
-    ctx.fillText(line,450,y);
-    y+=86;
-  });
-
-  ctx.font="bold 66px sans-serif";
-  ctx.fillStyle="#ffeb3b";
-  ctx.strokeStyle="#000";
-  ctx.strokeText("🎉 Happy New Year 2026 🎉",450,1075);
-  ctx.fillText("🎉 Happy New Year 2026 🎉",450,1075);
-}
-
-function nextShayari(){ index=(index+1)%shayariList.length; drawCard(); }
-function prevShayari(){ index=(index-1+shayariList.length)%shayariList.length; drawCard(); }
-
-function goBack(){
-  document.getElementById("uploadScreen").style.display="block";
-  document.getElementById("editScreen").style.display="none";
-}
-
-async function shareImage(){
-
-  let blob=await new Promise(res=>canvas.toBlob(res,"image/png"));
-  let file=new File([blob],"newyear_card.png",{type:"image/png"});
-
-  if(navigator.share && navigator.canShare && navigator.canShare({files:[file]})){
-    await navigator.share({
-      title:"VIP New Year Wish",
-      text:`🎉 Happy New Year 2026 🎉\n👉 यहाँ बनाओ अपना कार्ड:\n${SITE_LINK}`,
-      files:[file]
-    });
+  // 5 सेकंड के अंदर बार-बार ad नहीं
+  if(now-lastAd<5000){
+    action();
     return;
   }
 
-  alert("आपके ब्राउज़र में direct share support नहीं है।");
+  lastAd=now;
+
+  document.getElementById("adOverlay").style.display="block";
+  document.getElementById("skipBtn").style.display="none";
+  document.getElementById("skipInfo").innerText="⏳ 5 सेकंड प्रतीक्षा करें…";
+
+  loadInterstitial();
+
+  setTimeout(()=>{
+    document.getElementById("skipBtn").style.display="inline-block";
+    document.getElementById("skipInfo").innerText="➡ अब Skip कर सकते हैं";
+  },5000);
+}
+
+function closeAd(){
+  document.getElementById("adOverlay").style.display="none";
+  if(typeof afterAdAction==="function") afterAdAction();
+}
+
+/* ---------------- CARD MAKER ---------------- */
+
+const canvas=document.getElementById("c");
+const ctx=canvas.getContext("2d");
+const img=new Image();
+let i=0;
+
+const list=[
+"✨ नए साल की नई बहार,\nखुशियों की हो फुहार ✨",
+"💖 मुस्कान रहे हमेशा साथ,\nनया साल दे खुशियों की सौगात 💖",
+"🎉 हर दिन आपका खास बने,\nनया साल सुपरस्टार बने 🎉",
+"🌟 दुआ है रब से यही,\nपूरा हो हर सपना तुम्हारा 🌟"
+];
+
+function loadImg(){
+  const f=document.getElementById("imgInput").files[0];
+  if(!f)return;
+  img.src=URL.createObjectURL(f);
+  img.onload=function(){
+    document.getElementById("cardArea").style.display="block";
+    canvas.width=900;canvas.height=1100;
+    draw();
+  }
+}
+
+function draw(){
+  ctx.fillStyle="#000";ctx.fillRect(0,0,900,1100);
+  ctx.drawImage(img,0,40,900,760);
+
+  let g=ctx.createLinearGradient(0,760,900,1100);
+  g.addColorStop(0,"#ff0077cc");
+  g.addColorStop(1,"#33ffcc");
+  ctx.fillStyle=g;
+  ctx.roundRect(30,760,840,320,30);
+  ctx.fill();
+
+  ctx.textAlign="center";
+  ctx.fillStyle="#fff";
+  ctx.strokeStyle="#000";
+  ctx.lineWidth=6;
+  ctx.font="bold 54px sans-serif";
+  let y=880;
+
+  list[i].split("\n").forEach(line=>{
+    ctx.strokeText(line,450,y);
+    ctx.fillText(line,450,y);
+    y+=80;
+  });
+
+  ctx.font="bold 64px sans-serif";
+  ctx.fillStyle="yellow";
+  ctx.strokeText("🎉 Happy New Year 2026 🎉",450,1080);
+  ctx.fillText("🎉 Happy New Year 2026 🎉",450,1080);
+}
+
+function nextShayari(){i=(i+1)%list.length;draw();}
+function prevShayari(){i=(i-1+list.length)%list.length;draw();}
+
+function downloadImg(){
+  const a=document.createElement("a");
+  a.href=canvas.toDataURL();
+  a.download="newyear2026.png";
+  a.click();
+}
+
+async function shareImg(){
+  canvas.toBlob(async(b)=>{
+    const f=new File([b],"card.png",{type:"image/png"});
+    try{
+      await navigator.share({files:[f],title:"New Year 2026"});
+    }catch(e){alert("Share सपोर्ट नहीं करता");}
+  });
 }
 
 </script>
