--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>VIP New Year App 2026</title>
+<title> New Year  2026</title>
 
 <style>
 
@@ -110,7 +110,6 @@ button{
 
 <body>
 
-<div class="header">🎉 VIP NEW YEAR – 2026</div>
 
 <!-- FULLSCREEN AD -->
 <div id="adOverlay">
@@ -139,11 +138,6 @@ button{
 </div>
 </div>
 
-<div class="nav">
-  <div>🏠 Home</div>
-  <div>🖼 Create</div>
-  <div>👤 Profile</div>
-</div>
 
 <script>
 
